# libitc

./: .gitattributes  .gitignore  desktop.ini  libitc.qpf  libitc_assignment_defaults.qdf  libitc_top.qsf  logo_singal.icns  pyproject.toml  readme.md  vhdltool-config.yaml
docs/: I2C_Master.v  changlog.md  dht11.v  gpu.md  i2c_master.vhd  progress.md
greybox_tmp/: cbx_args.txt
lib/: dht.vhd  dot.vhd  key.vhd  lcd.vhd  lcd_mix.vhd  mot.vhd  rgb.vhd  seg.vhd  sw.vhd  tts.vhd
simulation/: bcd_seg_test.vwf  pwm.vwf
src/: clk.vhd  dht.vhd  dot.vhd  key.vhd  lcd.vhd  mot.vhd  rgb.vhd  seg.vhd  seg_v1.vhd  sw.vhd  tsl.vhd  tts.vhd
tests/: bcd_seg_test.vhd  bruh.vhd  bruh_data_pkg.vhd  dht.test.vhd  dht_seg_test.vhd  dht_test.vhd  dot_test.vhd  e109_01_01.vhd  key.test.vhd  key_seg_test.vhd  key_test.vhd  lcd_colors_test.vhd  lcd_image_test.vhd  lcd_image_test_bicolor.vhd  lcd_test.vhd  mot.test.vhd  mot_test.vhd  pwm_test.vhd  rgb.test.vhd  rgb_test.vhd  seg.test.vhd  seg_test.vhd  tsl.test.vhd  tsl_seg_test.vhd  tsl_test.vhd  tts.test.vhd  tts.txt  tts_test.vhd  tts_test.vhd.bak  (+4 more)
tools/: assign-cheng.tcl  assign.tcl  assign_backedup.tcl  assign_chenghsuan.tcl  assign_chenghung.tcl  compile.tcl  depoly.tcl  genmif.py  green-man-c.txt  green-man-vhdl.txt  lux.cpp  pp.py  preprocessor.py  project.tcl  pyproject.toml  readme.md  requirements.txt  rgb565.py  rgbset.py  seg_lut.py  sqrt.py  tsl2561_interface.vhd  tts.py
tools/gpu/: genmif.py  gig.py  image.py
tools/gpu/templates/: image.template.mif  rom.template.qip  rom.template.vhd
tools/lcd/: genmif.py
(+390 files in other folders)
